add front commponents

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,29 +1,103 @@
 // @import './scss/style.scss';
 
+// .work-area {
+//     width: 100vw;
+//     height: 100vh;
+//     display: flex;
+//     flex-direction: column;
+// }
+
+// .container {
+//     width: 100%;
+//     height: 100%;
+//     margin: 0 auto;
+//     padding-left: 1.5rem;
+//     padding-right: 1.5rem;
+
+//     @media screen and (max-width: 576px) {
+//         max-width: 100%;
+//     }
+//     @media screen and (min-width: 57.6rem) {
+//         max-width: 57.6rem;
+//     }
+//     @media screen and (min-width: 75.6rem) {
+//         max-width: 75.6rem;
+//     }
+//     @media screen and (min-width: 120.0rem) {
+//         max-width: 120rem;
+//     }
+// }
+
+html {
+	font-size: 62.5%;
+}
+.body {
+  font-size: 1.6rem;
+}
+html, .body, .work-area {
+  width: 100%;
+  height: 100%;
+}
+// .root-element {
+//   min-width: 100vw;
+//   min-height: 100vh;
+// }
 .work-area {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.container {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+.main-section {
+  width: 100%;
+  height: auto;
+  flex-grow: 1;
+}
+.main-section_all-height {
+  height: 100%;
+}
+.login-section {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.login-section > .row {
+  width: 100%;
+}
 
-    @media screen and (max-width: 576px) {
-        max-width: 100%;
-    }
-    @media screen and (min-width: 57.6rem) {
-        max-width: 57.6rem;
-    }
-    @media screen and (min-width: 75.6rem) {
-        max-width: 75.6rem;
-    }
-    @media screen and (min-width: 120.0rem) {
-        max-width: 120rem;
-    }
+.header-section .header-section__col {
+  padding: 20px 0;
+}
+
+.navigation {
+  background-color: #f5f5f5;
+}
+.nav-content {
+  display: inline;
+}
+
+.table-section__buttons-cell {
+  display: flex;
+  justify-content: flex-end;
+}
+.table-section__buttons-cell > button > i {
+  pointer-events: none;
+}
+.table-section__buttons-cell > button:last-child {
+  margin-left: 10px;
+}
+
+.btn-floating.btn-floating_custom {
+  position: fixed;
+  top: auto;
+  right: 50px;
+  bottom: 50px;
+  left: auto;
+  z-index: 10;
+}
+
+.footer {
+  padding: 25px 0;
 }
