need test front

--- a/client/src/components/ObjectPopup/ObjectPopup.component.scss
+++ b/client/src/components/ObjectPopup/ObjectPopup.component.scss
@@ -1,5 +1,5 @@
 form[name="form"] {
-  & select[name="status_id"] {
+  & select[name="statusId"] {
     display: block;
     height: 3rem;
     width: 100%;
