--- a/client/src/templates/index.html
+++ b/client/src/templates/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Application</title>
 
+  <base href="<%= htmlWebpackPlugin.options.baseUrl %>" />
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- Compiled and minified CSS -->
